src/objects/DS360oi__DonorSearch_del_del__c.object
<CustomObject>
    <fields>
        <fullName>DS360oi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DonorSearch</relationshipLabel>
        <relationshipName>DonorSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS360oi__Airplane_Owner__c</fullName>
        <label>Airplane Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Annual_Fund_Likelihood__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Fund Likelihood</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Arts_Count__c</fullName>
        <label>Arts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Arts_Total__c</fullName>
        <label>Arts Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Assessed__c</fullName>
        <label>Assessed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Assessment_Questions__c</fullName>
        <label>Assessment Questions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Average_Home_Value__c</fullName>
        <label>Average Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Boat__c</fullName>
        <label>Boat</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Business_Affilation__c</fullName>
        <label>Business Affilation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Business_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Revenue</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Capacity_Range_Based_on_Wealth__c</fullName>
        <label>Target Ask Based On Giving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Charitable_Gift_count__c</fullName>
        <label>Confirmed Charitable Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__City_State__c</fullName>
        <formula>DS360oi__ID__r.MailingCity + &quot; , &quot; + DS360oi__ID__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City &amp; State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Corp_Tech__c</fullName>
        <label>Corp Tech</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__DEM_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEM Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__DEM_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEM Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__DS_Rating__c</fullName>
        <label>DS Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS360oi__Donor__c</fullName>
        <label>Donor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Education_Count__c</fullName>
        <label>Education Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Education_Total__c</fullName>
        <label>Education Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__FAA_Pilots__c</fullName>
        <label>FAA Pilots</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Fnd_Corpus1__c</fullName>
        <label>Fnd Corpus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Fnd_board__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>Fnd Board</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__GS_board__c</fullName>
        <label>Non-Profit Board</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__HealthCare_Count__c</fullName>
        <label>HealthCare Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Healthcare_Total__c</fullName>
        <label>Healthcare Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Higher_Education_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Higher Education Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Higher_Education_Total__c</fullName>
        <label>Higher Education Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DonorSearch</relationshipLabel>
        <relationshipName>DonorSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS360oi__IRS_990PF__c</fullName>
        <label>IRS 990PF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__IRS_PUB_7806__c</fullName>
        <label>IRS PUB 7806</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Inner_Circle__c</fullName>
        <label>Inner Circle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__LN_Count__c</fullName>
        <label>LN Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__LN_Total__c</fullName>
        <label>LN Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Largest_Gift_Found_Lower_Range__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Ask Low</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Largest_Gift_Found__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Ask High</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Largest_Gift_Org__c</fullName>
        <label>Largest Gift Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Lead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DonorSearch</relationshipLabel>
        <relationshipName>DonorSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS360oi__Major_Gift_Likelihood__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Major Gift Likelihood</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Market_Guide_Comp__c</fullName>
        <label>Market Guide Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Market_Guide_Options__c</fullName>
        <label>Market Guide Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Market_guide__c</fullName>
        <label>Market guide</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Median_Household_Income__c</fullName>
        <label>Median Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS360oi__Other_Political_Count__c</fullName>
        <label>Other Political Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Other_Political_Total__c</fullName>
        <label>Other Political Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Overall__c</fullName>
        <label>Classic Quality Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__PGID_Rating__c</fullName>
        <label>PGID Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Pension_Assets__c</fullName>
        <label>Pension Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Pension__c</fullName>
        <label>Pension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Philanthropy_Grant_making_Count__c</fullName>
        <label>Philanthropy &amp; Grant making Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Philanthropy_and_Grant_making_Total__c</fullName>
        <label>Philanthropy and Grant making Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Planned_Gift_Likelihood__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Planned Gift Likelihood</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__PoliticalCount__c</fullName>
        <label>Political Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Political_total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total of Likely Political</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Profile__c</fullName>
        <label>Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DS360oi__Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__REP_Count__c</fullName>
        <label>REP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__REP_Total__c</fullName>
        <label>REP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__RFMFreq__c</fullName>
        <label>RFMFreq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__RFM_Money__c</fullName>
        <label>RFM Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__RFM_Recent_Gift__c</fullName>
        <label>RFM Recent Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__RFM_Total__c</fullName>
        <label>RFM-Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__RealEstate_Count__c</fullName>
        <label>Real Estate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Real_Estate_Estimate__c</fullName>
        <label>Real Estate Estimate</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Real_Estate_Trust__c</fullName>
        <label>Real Estate Trust</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Religon_Count__c</fullName>
        <label>Religion Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Religon_Total__c</fullName>
        <label>Religion Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Screening_Date__c</fullName>
        <label>Screening Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Sec_Insider__c</fullName>
        <label>Sec Insider</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Sec_Stock_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sec Stock Value</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Society_Benefit_Count__c</fullName>
        <label>Society Benefit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Society_Benefit_Total__c</fullName>
        <label>Society Benefit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__States_Have_Real_Estate__c</fullName>
        <label>States Have Real Estate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Total_Gift_Amount__c</fullName>
        <label>Possible Charitable Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Total_Gift_Count__c</fullName>
        <label>Possible Charitable Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Total_of_likely_matches__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Confirmed Charitable Giving</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Wealth_Capacity_Range__c</fullName>
        <label>Target Ask Based On Wealth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Wealth_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__Whoswho__c</fullName>
        <label>Whoswho</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS360oi__Zestimate_Count__c</fullName>
        <label>Zestimate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS360oi__Zestimate_Total__c</fullName>
        <label>Zestimate Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS360oi__shale_Count__c</fullName>
        <label>Shale Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DonorSearch</label>
    <listViews>
        <fullName>DS360oi__All</fullName>
        <columns>NAME</columns>
        <columns>DS360oi__DS_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salesforce ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DonorSearch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>